--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,8 @@ spring.jpa.show-sql=true
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port=9999
 
 #spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos?useSSL=false
