--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Diale
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create-drop
+#pring.jpa.hibernate.ddl-auto=drop
 server.port=9999
 
 #spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos?useSSL=false
