se agrego casi todo los servicios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,14 +19,14 @@
 
 
 #******************LOCALHOSTO******************
-#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=db_activos;encrypt=true;trustServerCertificate=true
-#spring.datasource.username=sa
-#spring.datasource.password=joelcito
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=db_activos;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=joelcito
 
 #******************PRODDUCIN******************
-spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos
-spring.datasource.username=jfloresq
-spring.datasource.password=*jfq23**
+#spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos
+#spring.datasource.username=jfloresq
+#spring.datasource.password=*jfq23**
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -36,6 +36,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 #pring.jpa.hibernate.ddl-auto=drop
 server.port=9999
+
 
 #spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos?useSSL=false
 #spring.datasource.username=jfloresq
@@ -50,3 +51,7 @@ server.port=9999
 #spring.jackson.locale=es_BO
 #spring.servlet.multipart.max-file-size=10MB
 #spring.servlet.multipart.max-request-size=10MB
+
+
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
