--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,21 +19,21 @@
 
 
 #******************LOCALHOSTO******************
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=db_activos;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=joelcito
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=db_activos;encrypt=true;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=joelcito
 
 #******************PRODDUCIN******************
-#spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos
-#spring.datasource.username=jfloresq
-#spring.datasource.password=*jfq23**
+spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos
+spring.datasource.username=jfloresq
+spring.datasource.password=*jfq23**
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #pring.jpa.hibernate.ddl-auto=drop
 server.port=9999
 
