--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 			<scope>runtime</scope>
 		</dependency>
 		
+		<dependency>
+		  <groupId>com.fasterxml.jackson.core</groupId>
+		  <artifactId>jackson-databind</artifactId>
+		  <version>2.12.4</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
