--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,16 +17,20 @@
 #spring.datasource.url=jdbc:sqlserver://JOELCITOO\SQLEXPRESS:1433;databaseName=db_activos;integratedSecurity=true;encrypt=true;trustServerCertificate=true
 
 
+#******************PRODDUCIN DESARROLLO NUEVO MIGRACIO******************
+spring.datasource.url=jdbc:sqlserver://10.10.60.205;databaseName=cossmil
+spring.datasource.username=jfloresq
+spring.datasource.password=migra23*
 
 #******************LOCALHOSTO******************
 #spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=db_activos;encrypt=true;trustServerCertificate=true
 #spring.datasource.username=sa
 #spring.datasource.password=joelcito
 
-#******************PRODDUCIN******************
-spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos
-spring.datasource.username=jfloresq
-spring.datasource.password=*jfq23**
+#******************PRODDUCIN DESARROLLO******************
+#spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos
+#spring.datasource.username=jfloresq
+#spring.datasource.password=*jfq23**
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
