--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Diale
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 #pring.jpa.hibernate.ddl-auto=drop
-server.port=9999
+#server.port=9999
+server.port=9001
 
 #spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos?useSSL=false
 #spring.datasource.username=jfloresq
