--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@
 #spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=db_activos;integratedSecurity=true;encrypt=true;trustServerCertificate=true
 #spring.datasource.url=jdbc:sqlserver://JOELCITOO\SQLEXPRESS:1433;databaseName=db_activos;integratedSecurity=true;encrypt=true;trustServerCertificate=true
 
+spring.application.name=servicio_activos
 
 #******************PRODDUCIN DESARROLLO NUEVO MIGRACIO******************
 spring.datasource.url=jdbc:sqlserver://10.10.60.205;databaseName=cossmil
@@ -40,7 +41,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 #pring.jpa.hibernate.ddl-auto=drop
 #server.port=9999
-server.port=9001
+server.port=9003
 
 #spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos?useSSL=false
 #spring.datasource.username=jfloresq
