se arego los cambios requerido para imagenes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,9 @@ spring.jpa.hibernate.ddl-auto=update
 #server.port=9999
 server.port=9003
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 #spring.datasource.url=jdbc:sqlserver://10.10.60.200;databaseName=db_activos?useSSL=false
 #spring.datasource.username=jfloresq
 #spring.datasource.password=12345$.
