--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,22 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 		  <artifactId>json</artifactId>
 		  <version>20210307</version>
 		</dependency>
+		
+		<!-- REPORTES -->
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+			<version>6.18.1</version>
+		</dependency>
+		 
+		<!--
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>5.2.3</version>
+		</dependency>		
+		-->
+
 				
 		<!-- 
 		<dependency>
