se agrego los cambios realiazados en lso reporets

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 				<artifactId>spring-boot-maven-plugin</artifactId>		 
 			</plugin>
 		</plugins>
+		<resources>
+	        <resource>
+	            <directory>src/main/resources</directory>
+	        </resource>
+	    </resources>
 	</build>
 
 </project>
