se agrego los camgios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,11 @@
 spring.application.name=servicio_activos
 
 #******************PRODDUCIN DESARROLLO NUEVO MIGRACIO******************
+#spring.datasource.url=jdbc:sqlserver://192.168.1.2;databaseName=cossmil
+#spring.datasource.username=usr_SIAFIWEB
+#spring.datasource.password=2$@7m31%-
+
+#******************PRODDUCIN DESARROLLO NUEVO MIGRACIO******************
 spring.datasource.url=jdbc:sqlserver://10.10.60.205;databaseName=cossmil
 spring.datasource.username=jfloresq
 spring.datasource.password=migra23*
@@ -37,7 +42,11 @@ spring.jpa.show-sql=true
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+
+#-----------ESTE EN PRODUCCION SE COMENTO POR QUE YA ESTA CREADO-----------
+#spring.jpa.hibernate.ddl-auto=update
+#-----------ESTE EN PRODUCCION SE COMENTO POR QUE YA ESTA CREADO-----------
+
 #spring.jpa.hibernate.ddl-auto=create-drop
 #pring.jpa.hibernate.ddl-auto=drop
 #server.port=9999
