--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,14 +19,14 @@
 spring.application.name=servicio_activos
 
 #******************PRODDUCIN DESARROLLO NUEVO MIGRACIO******************
-#spring.datasource.url=jdbc:sqlserver://192.168.1.2;databaseName=cossmil
-#spring.datasource.username=usr_SIAFIWEB
-#spring.datasource.password=2$@7m31%-
+spring.datasource.url=jdbc:sqlserver://10.151.10.15;databaseName=cossmil
+spring.datasource.username=usr_SIAFIWEB
+spring.datasource.password=2$@7m31%-
 
 #******************PRODDUCIN DESARROLLO NUEVO MIGRACIO******************
-spring.datasource.url=jdbc:sqlserver://10.10.60.205;databaseName=cossmil
-spring.datasource.username=jfloresq
-spring.datasource.password=migra23*
+#spring.datasource.url=jdbc:sqlserver://10.10.60.205;databaseName=cossmil
+#spring.datasource.username=jfloresq
+#spring.datasource.password=migra23*
 
 #******************LOCALHOSTO******************
 #spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=db_activos;encrypt=true;trustServerCertificate=true
