se cerro todo uya

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 
 spring.application.name=servicio_activos
 
-#******************PRODDUCIN DESARROLLO NUEVO MIGRACIO******************
+#******************PRODDUCIN DESARROLLO NUEVO PRODUCCION******************
 spring.datasource.url=jdbc:sqlserver://10.151.10.15;databaseName=cossmil
 spring.datasource.username=usr_SIAFIWEB
 spring.datasource.password=2$@7m31%-
